# server/restapi/operations/goods/get_all_goods_in_basket_parameters.go
@@ -10,6 +10,7 @@ import (
 
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/swag"
 
 	strfmt "github.com/go-openapi/strfmt"
 )
@@ -34,7 +35,7 @@ type GetAllGoodsInBasketParams struct {
 	  Required: true
 	  In: path
 	*/
-	BasketID string
+	BasketID int64
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
@@ -67,7 +68,11 @@ func (o *GetAllGoodsInBasketParams) bindBasketID(rawData []string, hasKey bool, 
 	// Required: true
 	// Parameter is provided by construction from the route
 
-	o.BasketID = raw
+	value, err := swag.ConvertInt64(raw)
+	if err != nil {
+		return errors.InvalidType("basketId", "path", "int64", raw)
+	}
+	o.BasketID = value
 
 	return nil
 }
